# open-pdf-studio

./: .gitignore  Cargo.toml  package-lock.json
.github/workflows/: android.yml  auto-assign-issues.yml  ci.yml  live.yml  nightly.yml  release.yml  snap.yml
docs/: architecture-explorer.html
docs/superpowers/: improvement-log.md  research-pdfium-browser-integration.md
flatpak/: org.openaec.OpenPdfStudio.desktop  org.openaec.OpenPdfStudio.metainfo.xml  org.openaec.OpenPdfStudio.yml
mcp-server/: README.md  decode-screenshot.mjs  engine-comparison.mjs  live-perf-monitor.mjs  multi-process-perf.mjs  open-perf-probe.mjs  pdfjs-vs-rust-render.mjs  skia-vs-pdfium-render.mjs  sweep-all-pdfs.mjs  test-tauri-cdp.mjs  test-zoom-pan.mjs  zoom-loop.mjs  zoom-observer.mjs  zoom-wheel-probe.mjs
open-pdf-render/: Cargo.toml
open-pdf-render/examples/: inspect_page.rs  profile_render.rs  render_page_literal.rs
open-pdf-render/src/: draw_commands.rs  fonts.rs  graphics_state.rs  interpreter.rs  lib.rs  parser.rs  renderer.rs  text_renderer.rs
open-pdf-render/tests/: test_2459.rs  test_real_pdf.rs  test_text_debug.rs  (+1 more)
open-pdf-studio/: CLAUDE.md  index.html  package-lock.json  package.json  styles.css  test-symbols-cdp.mjs  vite.config.js
parliament/: index.html  style.css
pdfium-worker/: Cargo.toml
pdfium-worker/src/: main.rs  protocol.rs  render.rs  shm.rs
pdfium-worker/tests/: render_integration.rs
pocs/: README.md
scripts/: render-regression-test.py  render_test_iter23.py  requirements-test.txt  run-render-regression.mjs
snap/: snapcraft.yaml
(+697 files in other folders)
