[package]
name = "pdfium-worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdfium-worker"
path = "src/main.rs"

[dependencies]
pdfium-render = { version = "0.9.1", features = ["thread_safe", "image_025"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
